--- a/index.html
+++ b/index.html
@@ -11,9 +11,19 @@
 </head>
 <body>
     <div id="root"></div>
+</body>
+</html>
 
-    <script type="text/babel">
-        
-    </script>
+
+<script type="text/babel">
+    class App extends React.Component {
+        render() {
+            return <h1>Hello React!</h1>;
+        }
+    }
+
+    ReactDOM.render(<App />, document.getElementById('root'))
+</script>
+
 </body>
 </html>
